--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,6 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.username=root
-db.url=jdbc:mysql://127.0.0.1:3306/person_schema?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-db.password=Nobita19860806#
+db.username=xxx
+#db.username=root
+db.url=jdbc:mysql://xxx.xxx.xxx.xxx:3306/answer_system?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=CTT
+#db.url=jdbc:mysql://127.0.0.1:3306/answerdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=CTT
+db.password=xxx
